--- a/kaggle_challenge.ipynb
+++ b/kaggle_challenge.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,7 @@
     "import re\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "import xgboost as xgb"
    ]
@@ -3411,6 +3412,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        1\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "39665    1\n",
+       "39666    0\n",
+       "39668    0\n",
+       "39669    1\n",
+       "39670    1\n",
+       "Name: updates, Length: 37939, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
@@ -3443,7 +3475,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For XGBoost:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_train = xgb.DMatrix(X_train, label=y_train)\n",
+    "D_test = xgb.DMatrix(X_test, label=y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Tony/opt/anaconda3/envs/ml/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12:25:39] WARNING: /Users/runner/miniforge3/conda-bld/xgboost_1607604592557/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+       "              importance_type='gain', interaction_constraints='',\n",
+       "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
+       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "              n_estimators=100, n_jobs=8, num_parallel_tree=1, random_state=0,\n",
+       "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "              tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = xgb.XGBClassifier(n_estimators=100)\n",
+    "\n",
+    "\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_preds = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.96      0.95      4984\n",
+      "           1       0.92      0.90      0.91      2604\n",
+      "\n",
+      "    accuracy                           0.94      7588\n",
+      "   macro avg       0.94      0.93      0.93      7588\n",
+      "weighted avg       0.94      0.94      0.94      7588\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_preds))"
    ]
   },
   {
