--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,13 +902,15 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "classifiers = {\n",
     "    'duc' : make_pipeline(processor_lin, OneVsRestClassifier(DummyClassifier(strategy='prior', random_state=1))),\n",
     "    'rfc' : make_pipeline(processor_lin, OneVsRestClassifier(RandomForestClassifier(random_state=1))),\n",
     "    'gbc' : make_pipeline(processor_lin, OneVsRestClassifier(GradientBoostingClassifier(random_state=1))),\n",
-    "    'xgc' : make_pipeline(processor_lin, OneVsRestClassifier(XGBClassifier(random_state=1, verbose=True, eval_metric='logloss'))),  \n",
-    "    'svc' : make_pipeline(processor_lin, OneVsRestClassifier(SVC(kernel='linear', probability=True, random_state=1))),\n",
+    "    'xgc' : make_pipeline(processor_lin, OneVsRestClassifier(XGBClassifier(random_state=1, verbose=True, eval_metric='logloss'))),\n",
+    "    'mpc' : make_pipeline(processor_lin, OneVsRestClassifier(MLPClassifier(random_state=1)))\n",
+    "    #'svc' : make_pipeline(processor_lin, OneVsRestClassifier(SVC(kernel='linear', probability=True, random_state=1))),\n",
     "}"
    ]
   },
@@ -923,27 +925,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training duc ...\n",
-      "Wall time: 189 ms\n",
-      "2.2743314534065138\n",
-      "Training rfc ...\n",
-      "Wall time: 48.2 s\n",
-      "1.1948558276322874\n",
-      "Training gbc ...\n",
-      "Wall time: 28.7 s\n",
-      "1.382503328344713\n",
-      "Training xgc ...\n",
-      "Wall time: 7.18 s\n",
-      "1.3540913110325103\n",
-      "Training svc ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import log_loss\n",
@@ -974,17 +956,252 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have the following input :\n",
+    "```\n",
+    "Training duc ...\n",
+    "Wall time: 189 ms\n",
+    "2.2743314534065138\n",
+    "Training rfc ...\n",
+    "Wall time: 48.2 s\n",
+    "1.1948558276322874\n",
+    "Training gbc ...\n",
+    "Wall time: 28.7 s\n",
+    "1.382503328344713\n",
+    "Training xgc ...\n",
+    "Wall time: 7.18 s\n",
+    "1.3540913110325103\n",
+    "Training mpc ...\n",
+    "Wall time: 52.9 s\n",
+    "1.6615107416581647\n",
+    "Training svc ...\n",
+    "```\n",
+    "We notice that SVC takes too more times to fit. We will not consider it. We notice that the most promising algorithms is the **Random Forest**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ColumnTransformer(transformers=[('datetransformer', DateTransformer(),\n",
+       "                                 ['date']),\n",
+       "                                ('pipeline-1',\n",
+       "                                 Pipeline(steps=[('boundedlabeltransformer',\n",
+       "                                                  BoundedLabelTransformer()),\n",
+       "                                                 ('onehotencoder',\n",
+       "                                                  OneHotEncoder(handle_unknown='ignore'))]),\n",
+       "                                 ['org', 'tld']),\n",
+       "                                ('boundedordinaltransformer',\n",
+       "                                 BoundedOrdinalTransformer(),\n",
+       "                                 ['images', 'urls']),\n",
+       "                                ('onehotencoder', OneHotEncoder(),\n",
+       "                                 ['mail_type']),\n",
+       "                                ('pipeline-2',\n",
+       "                                 Pipeline(steps=[('simpleimputer',\n",
+       "                                                  SimpleImputer()),\n",
+       "                                                 ('robustscaler',\n",
+       "                                                  RobustScaler())]),\n",
+       "                                 ['chars_in_subject', 'chars_in_body'])])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifiers['rfc']['columntransformer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 25 possibilites for the RandomizedSearchCV.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "param_dist = {\n",
+    "#      'columntransformer__pipeline-1__boundedlabeltransformer__org' : [1,20,40,50,60,100],\n",
+    "#      'columntransformer__pipeline-1__boundedlabeltransformer__tld' : [1,10,20,30,50],\n",
+    "     'columntransformer__boundedordinaltransformer__images' : [1, 5, 10, 15, 20],\n",
+    "     'columntransformer__boundedordinaltransformer__urls' : [1, 30, 50, 70, 100],\n",
+    "#      'onevsrestclassifier__estimator__bootstrap': [True, False],\n",
+    "#      'onevsrestclassifier__estimator__max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, None],\n",
+    "#      'onevsrestclassifier__estimator__max_features': ['auto', 'sqrt'],\n",
+    "#      'onevsrestclassifier__estimator__min_samples_leaf': [1, 2, 4],\n",
+    "#      'onevsrestclassifier__estimator__min_samples_split': [2, 5, 10],\n",
+    "#      'onevsrestclassifier__estimator__n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]\n",
+    "}\n",
+    "\n",
+    "number_possibilites = 1\n",
+    "for key, value in param_dist.items():\n",
+    "    number_possibilites = number_possibilites * len(value)\n",
+    "\n",
+    "print(\"There are\", str(number_possibilites), \"possibilites for the RandomizedSearchCV.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 1 candidates, totalling 2 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   37.8s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   37.8s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=2,\n",
+       "                   estimator=Pipeline(steps=[('columntransformer',\n",
+       "                                              ColumnTransformer(transformers=[('datetransformer',\n",
+       "                                                                               DateTransformer(),\n",
+       "                                                                               ['date']),\n",
+       "                                                                              ('pipeline-1',\n",
+       "                                                                               Pipeline(steps=[('boundedlabeltransformer',\n",
+       "                                                                                                BoundedLabelTransformer()),\n",
+       "                                                                                               ('onehotencoder',\n",
+       "                                                                                                OneHotEncoder(handle_unknown='ignore'))]),\n",
+       "                                                                               ['org',\n",
+       "                                                                                'tld']),\n",
+       "                                                                              ('boundedordinaltransformer',\n",
+       "                                                                               BoundedOrdina...\n",
+       "                                                                                'chars_in_body'])])),\n",
+       "                                             ('onevsrestclassifier',\n",
+       "                                              OneVsRestClassifier(estimator=RandomForestClassifier(random_state=1)))]),\n",
+       "                   n_iter=1, n_jobs=-1,\n",
+       "                   param_distributions={'columntransformer__boundedordinaltransformer__images': [1,\n",
+       "                                                                                                 5,\n",
+       "                                                                                                 10,\n",
+       "                                                                                                 15,\n",
+       "                                                                                                 20],\n",
+       "                                        'columntransformer__boundedordinaltransformer__urls': [1,\n",
+       "                                                                                               30,\n",
+       "                                                                                               50,\n",
+       "                                                                                               70,\n",
+       "                                                                                               100]},\n",
+       "                   random_state=1, return_train_score=True,\n",
+       "                   scoring='neg_log_loss', verbose=1)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import log_loss\n",
+    "\n",
+    "random_search =RandomizedSearchCV(\n",
+    "    estimator=classifiers['rfc'],\n",
+    "    param_distributions=param_dist,\n",
+    "    scoring='neg_log_loss',\n",
+    "    n_iter=1,\n",
+    "    cv=2, # 5 !!\n",
+    "    verbose=1,\n",
+    "    random_state=1,\n",
+    "    n_jobs=-1,\n",
+    "    return_train_score=True)\n",
+    "\n",
+    "random_search.fit(X_full, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean_fit_time': array([31.84999895]),\n",
+       " 'std_fit_time': array([0.01646709]),\n",
+       " 'mean_score_time': array([2.20364714]),\n",
+       " 'std_score_time': array([0.00299001]),\n",
+       " 'param_columntransformer__boundedordinaltransformer__urls': masked_array(data=[100],\n",
+       "              mask=[False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'param_columntransformer__boundedordinaltransformer__images': masked_array(data=[10],\n",
+       "              mask=[False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'params': [{'columntransformer__boundedordinaltransformer__urls': 100,\n",
+       "   'columntransformer__boundedordinaltransformer__images': 10}],\n",
+       " 'split0_test_score': array([-1.22873182]),\n",
+       " 'split1_test_score': array([-1.2114995]),\n",
+       " 'mean_test_score': array([-1.22011566]),\n",
+       " 'std_test_score': array([0.00861616]),\n",
+       " 'rank_test_score': array([1]),\n",
+       " 'split0_train_score': array([-0.97236014]),\n",
+       " 'split1_train_score': array([-0.98001692]),\n",
+       " 'mean_train_score': array([-0.97618853]),\n",
+       " 'std_train_score': array([0.00382839])}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_search.cv_results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_y = random_search.predict_proba(X_full_test)\n",
+    "\n",
+    "pred_df = pd.DataFrame(pred_y, columns=['updates', 'personal', 'promotions',\n",
+    "                        'forums', 'purchases', 'travel',\n",
+    "                        'spam', 'social'])\n",
+    "pred_df.to_csv(\"submission_ml.csv\", index=True, index_label='Id')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Save results to submission file\n",
-    "pred_df = pd.DataFrame(pred_y, columns=['updates', 'personal', 'promotions',\n",
-    "                        'forums', 'purchases', 'travel',\n",
-    "                        'spam', 'social'])\n",
-    "pred_df.to_csv(\"knn_sample_submission_ml.csv\", index=True, index_label='Id')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
