--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,12 +711,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_full = train_df.copy(deep=True)\n",
-    "X_full_test = test_df.copy(deep=True)\n",
+    "X_full = train_df[:100].copy(deep=True)\n",
+    "X_full_test = test_df[:100].copy(deep=True)\n",
     "\n",
     "y_col = ['updates', 'personal', 'promotions', 'forums', 'purchases', 'travel', 'spam', 'social']\n",
     "y = X_full[y_col]\n",
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
     "    'rfc' : make_pipeline(processor_lin, OneVsRestClassifier(RandomForestClassifier(random_state=1))),\n",
     "    'gbc' : make_pipeline(processor_lin, OneVsRestClassifier(GradientBoostingClassifier(random_state=1))),\n",
     "    'xgc' : make_pipeline(processor_lin, OneVsRestClassifier(XGBClassifier(random_state=1, verbose=True, eval_metric='logloss'))),\n",
-    "    'mpc' : make_pipeline(processor_lin, OneVsRestClassifier(MLPClassifier(random_state=1)))\n",
+    "    'mpc' : make_pipeline(processor_lin, OneVsRestClassifier(MLPClassifier(random_state=1))),\n",
     "    #'svc' : make_pipeline(processor_lin, OneVsRestClassifier(SVC(kernel='linear', probability=True, random_state=1))),\n",
     "}"
    ]
@@ -1028,14 +1028,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 25 possibilites for the RandomizedSearchCV.\n"
+      "There are 2970000 possibilites for the RandomizedSearchCV.\n"
      ]
     }
    ],
@@ -1043,16 +1043,16 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "param_dist = {\n",
-    "#      'columntransformer__pipeline-1__boundedlabeltransformer__org' : [1,20,40,50,60,100],\n",
-    "#      'columntransformer__pipeline-1__boundedlabeltransformer__tld' : [1,10,20,30,50],\n",
-    "     'columntransformer__boundedordinaltransformer__images' : [1, 5, 10, 15, 20],\n",
-    "     'columntransformer__boundedordinaltransformer__urls' : [1, 30, 50, 70, 100],\n",
-    "#      'onevsrestclassifier__estimator__bootstrap': [True, False],\n",
-    "#      'onevsrestclassifier__estimator__max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, None],\n",
-    "#      'onevsrestclassifier__estimator__max_features': ['auto', 'sqrt'],\n",
-    "#      'onevsrestclassifier__estimator__min_samples_leaf': [1, 2, 4],\n",
-    "#      'onevsrestclassifier__estimator__min_samples_split': [2, 5, 10],\n",
-    "#      'onevsrestclassifier__estimator__n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]\n",
+    "    'columntransformer__pipeline-1__boundedlabeltransformer__org' : [1,20,40,50,60,100],\n",
+    "    'columntransformer__pipeline-1__boundedlabeltransformer__tld' : [1,10,20,30,50],\n",
+    "    'columntransformer__boundedordinaltransformer__images' : [1, 5, 10, 15, 20],\n",
+    "    'columntransformer__boundedordinaltransformer__urls' : [1, 30, 50, 70, 100],\n",
+    "    'onevsrestclassifier__estimator__bootstrap': [True, False],\n",
+    "    'onevsrestclassifier__estimator__max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, None],\n",
+    "    'onevsrestclassifier__estimator__max_features': ['auto', 'sqrt'],\n",
+    "    'onevsrestclassifier__estimator__min_samples_leaf': [1, 2, 4],\n",
+    "    'onevsrestclassifier__estimator__min_samples_split': [2, 5, 10],\n",
+    "    'onevsrestclassifier__estimator__n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]\n",
     "}\n",
     "\n",
     "number_possibilites = 1\n",
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1079,8 +1079,10 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   37.8s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   37.8s finished\n"
+      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   17.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   17.6s finished\n",
+      "C:\\Users\\amoni\\Miniconda3\\envs\\ia-tools\\lib\\site-packages\\sklearn\\multiclass.py:77: UserWarning: Label not 5 is present in all training examples.\n",
+      "  str(classes[c]))\n"
      ]
     },
     {
@@ -1100,25 +1102,29 @@
        "                                                                                'tld']),\n",
        "                                                                              ('boundedordinaltransformer',\n",
        "                                                                               BoundedOrdina...\n",
-       "                                                                                'chars_in_body'])])),\n",
-       "                                             ('onevsrestclassifier',\n",
-       "                                              OneVsRestClassifier(estimator=RandomForestClassifier(random_state=1)))]),\n",
-       "                   n_iter=1, n_jobs=-1,\n",
-       "                   param_distributions={'columntransformer__boundedordinaltransformer__images': [1,\n",
-       "                                                                                                 5,\n",
-       "                                                                                                 10,\n",
-       "                                                                                                 15,\n",
-       "                                                                                                 20],\n",
-       "                                        'columntransformer__boundedordinaltransformer__urls': [1,\n",
-       "                                                                                               30,\n",
-       "                                                                                               50,\n",
-       "                                                                                               70,\n",
-       "                                                                                               100]},\n",
+       "                                        'onevsrestclassifier__estimator__max_features': ['auto',\n",
+       "                                                                                         'sqrt'],\n",
+       "                                        'onevsrestclassifier__estimator__min_samples_leaf': [1,\n",
+       "                                                                                             2,\n",
+       "                                                                                             4],\n",
+       "                                        'onevsrestclassifier__estimator__min_samples_split': [2,\n",
+       "                                                                                              5,\n",
+       "                                                                                              10],\n",
+       "                                        'onevsrestclassifier__estimator__n_estimators': [200,\n",
+       "                                                                                         400,\n",
+       "                                                                                         600,\n",
+       "                                                                                         800,\n",
+       "                                                                                         1000,\n",
+       "                                                                                         1200,\n",
+       "                                                                                         1400,\n",
+       "                                                                                         1600,\n",
+       "                                                                                         1800,\n",
+       "                                                                                         2000]},\n",
        "                   random_state=1, return_train_score=True,\n",
        "                   scoring='neg_log_loss', verbose=1)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1137,7 @@
     "    param_distributions=param_dist,\n",
     "    scoring='neg_log_loss',\n",
     "    n_iter=1,\n",
-    "    cv=2, # 5 !!\n",
+    "    cv=2,\n",
     "    verbose=1,\n",
     "    random_state=1,\n",
     "    n_jobs=-1,\n",
@@ -1142,66 +1148,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([31.84999895]),\n",
-       " 'std_fit_time': array([0.01646709]),\n",
-       " 'mean_score_time': array([2.20364714]),\n",
-       " 'std_score_time': array([0.00299001]),\n",
-       " 'param_columntransformer__boundedordinaltransformer__urls': masked_array(data=[100],\n",
-       "              mask=[False],\n",
-       "        fill_value='?',\n",
-       "             dtype=object),\n",
-       " 'param_columntransformer__boundedordinaltransformer__images': masked_array(data=[10],\n",
-       "              mask=[False],\n",
-       "        fill_value='?',\n",
-       "             dtype=object),\n",
-       " 'params': [{'columntransformer__boundedordinaltransformer__urls': 100,\n",
-       "   'columntransformer__boundedordinaltransformer__images': 10}],\n",
-       " 'split0_test_score': array([-1.22873182]),\n",
-       " 'split1_test_score': array([-1.2114995]),\n",
-       " 'mean_test_score': array([-1.22011566]),\n",
-       " 'std_test_score': array([0.00861616]),\n",
-       " 'rank_test_score': array([1]),\n",
-       " 'split0_train_score': array([-0.97236014]),\n",
-       " 'split1_train_score': array([-0.98001692]),\n",
-       " 'mean_train_score': array([-0.97618853]),\n",
-       " 'std_train_score': array([0.00382839])}"
+       "{'onevsrestclassifier__estimator__n_estimators': 1600,\n",
+       " 'onevsrestclassifier__estimator__min_samples_split': 10,\n",
+       " 'onevsrestclassifier__estimator__min_samples_leaf': 2,\n",
+       " 'onevsrestclassifier__estimator__max_features': 'auto',\n",
+       " 'onevsrestclassifier__estimator__max_depth': 80,\n",
+       " 'onevsrestclassifier__estimator__bootstrap': True,\n",
+       " 'columntransformer__pipeline-1__boundedlabeltransformer__tld': 20,\n",
+       " 'columntransformer__pipeline-1__boundedlabeltransformer__org': 1,\n",
+       " 'columntransformer__boundedordinaltransformer__urls': 30,\n",
+       " 'columntransformer__boundedordinaltransformer__images': 1}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random_search.cv_results_"
+    "random_search.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_y = random_search.predict_proba(X_full_test)\n",
-    "\n",
+    "# without fine tuning\n",
+    "rfc = make_pipeline(processor_lin, OneVsRestClassifier(RandomForestClassifier(random_state=1)))\n",
+    "rfc.fit(X_full, y)\n",
+    "pred_y = rfc.predict_proba(X_full_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pred_df = pd.DataFrame(pred_y, columns=['updates', 'personal', 'promotions',\n",
     "                        'forums', 'purchases', 'travel',\n",
     "                        'spam', 'social'])\n",
     "pred_df.to_csv(\"submission_ml.csv\", index=True, index_label='Id')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
